cabal-version: 3.0

author: monadosquito
extra-source-files: CHANGELOG.md
category: Game
license: MIT
license-file: LICENSE
maintainer: monadosquito@gmail.com
name: runner
version: 1.0.0

executable runner
    build-depends:
        base,
        containers,
        free,
        lens,
        mtl,
        random,
        aeson,
        bytestring,
        lens-aeson,
        nonempty-containers,
        text,
        optparse-applicative,
        brick,
        vty,
    default-language: Haskell2010
    ghc-options: -Wall
    hs-source-dirs: src,
    main-is: Main.hs
    other-modules:
        Core.Script.Track.Track1,
        Core.Track,
        Core.Track.Track,
        Core.Port.Renderer,
        Driver.Renderer.Cnsl,
        Core.Configuration,
        Core.Configuration.Configuration,
        Core.Port.Environment,
        Core.Port.Parser,
        Core.Script.Track,
        Core.Script.Track.DefaultTrack,
        Core.Script.Track.Track2,
        Driver.Environment.Sys,
        Driver.Parser.Aeson,
        Core.Track.Configuration,
        Core.Track.Configuration.Configuration,
        Core.Constraint,
        Core.Character.Character,
        Core.Signal.Signal,
        Core.Track.Character.Character,
        Core.Port.Driver,
        Driver.Driver.Brick,
