cabal-version: 2.0

author: monadosquito
extra-source-files: CHANGELOG.md
category: Game
license: MIT
license-file: LICENSE
maintainer: monadosquito@gmail.com
name: runner
version: 1.3.0

executable runner
    build-depends:
        base,
        containers,
        free,
        lens,
        mtl,
        random,
        aeson,
        bytestring,
        lens-aeson,
        text,
        ghcjs-dom,
        miso
    if impl(ghcjs)
        build-depends:
            ghcjs-base,
            servant
    else
        build-depends:
            jsaddle,
            jsaddle-warp,
            nonempty-containers,
            optparse-applicative,
            brick,
            vty,
            directory
    default-language: Haskell2010
    ghc-options: -Wall
    hs-source-dirs: src
    main-is: Main.hs
    other-modules:
        Core.Script.Track.Track1,
        Core.Track,
        Core.Track.Track,
        Core.Port.Renderer,
        Driver.Renderer.Cnsl,
        Core.Configuration,
        Core.Configuration.Configuration,
        Core.Port.Environment,
        Core.Port.Parser,
        Core.Script.Track,
        Core.Script.Track.DefaultTrack,
        Core.Script.Track.Track2,
        Driver.Environment.Console,
        Driver.Parser.Aeson,
        Core.Track.Configuration,
        Core.Track.Configuration.Configuration,
        Core.Constraint,
        Core.Character.Character,
        Core.Signal.Signal,
        Core.Track.Character.Character,
        Core.Port.Driver,
        Driver.Driver.Brick,
        Core.Core,
        Driver.Www.Comm,
        Core.Flow.Flow,
        Core.Script.Flow.Flow1,
        Driver.Driver.Www.View.KBinds,
        Driver.Driver.Www.View.MainMenu,
        Driver.Driver.Www.View.NotFound,
        Driver.Driver.Www.View.Prefs,
        Driver.Driver.Www.View.Rac,
        Driver.Driver.Www.View,
        Driver.Driver.Www.Www
    if flag(cons) && !flag(dry-run)
        cpp-options: -DCONS
    if flag(cons) && flag(dry-run)
        cpp-options: -DCONS -fforce-recomp -fno-code
    if flag(www) && !flag(dry-run)
        cpp-options: -DWWW
    if flag(www) && flag(dry-run)
        cpp-options: -DWWW -fforce-recomp -fno-code
custom-setup

flag cons
    manual: True
    default: False

flag www
    manual: True
    default: False

flag dry-run
    manual: True
    default: False
